hide 'select' column on order form

--- a/src/components/orders/orders.template.html
+++ b/src/components/orders/orders.template.html
@@ -74,7 +74,7 @@
                 <div class="Rtable-cell date-cell column-heading">Order Type</div>
                 <div class="Rtable-cell date-cell column-heading">Date</div>
                 <div class="Rtable-cell date-cell column-heading">Status</div>
-                <div class="Rtable-cell date-cell column-heading">Select</div>
+                <!-- <div class="Rtable-cell date-cell column-heading">Select</div> -->
             </div>
 
             <div class="Rtable-row" *ngFor="let order of orderList">
@@ -115,10 +115,10 @@
                     <div class="Rtable-cell--heading">Status</div>
                     <div class="Rtable-cell--content title-content">{{order.orderState}}</div>
                 </div>
-                <div class="Rtable-cell date-cell">
+                <!-- <div class="Rtable-cell date-cell">
                     <div class="Rtable-cell--heading">Select</div>
                     <div class="Rtable-cell--content title-content">Checked</div>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
