--- a/src/components/orders/new-order.template.html
+++ b/src/components/orders/new-order.template.html
@@ -126,7 +126,8 @@
         </div>
         <div class="col-sm">
             <form class="example" action="javascript:void(0);">
-                <input #testinput [(ngModel)]="scannedSerialNo" (keyup.enter)='onScanSubscription.next({ event: $event, message: SCAN_EVENT_MACADDRESS })'
+                <!-- <input #testinput [(ngModel)]="scannedSerialNo" (keyup.enter)='onScanSubscription.next({ event: $event, message: SCAN_EVENT_MACADDRESS })' -->
+                <input #testinput [(ngModel)]="scannedSerialNo" (keyup.enter)='addItem(testinput.value)'
                     class="search" type="text" placeholder="MAC Address" name="mac">
                 <button  type="submit"><i class="material-icons small">search</i></button>
             </form>
@@ -208,7 +209,7 @@
                             <div class="Rtable-cell small-cell">
                                 <div class="Rtable-cell--heading">Delete</div>
                                 <div class="Rtable-cell--content">
-                                    <a href="javascript:void(0);" (click)="Removeitem(item.partNumber, item.serialNumber)" class="btn-container">
+                                    <a href="javascript:void(0);" (click)="removeitem(item.partNumber, item.serialNumber)" class="btn-container">
                                         <span><i class="material-icons small">close</i></span>
                                     </a>
                                 </div>
