make all list filters sticky

--- a/src/components/orders/orders.template.html
+++ b/src/components/orders/orders.template.html
@@ -1,5 +1,5 @@
 <!-- ORDER CONTROLS -->
-<div class="flex-grid padded-aside">
+<div class="flex-grid padded-aside filter-fixed">
     <div class="col-md">
         <div class="flex-grid">
             <div class="col-sm">
@@ -75,7 +75,7 @@
 <div class="flex-container row padded-aside">
     <div class="wrapper">
         <div class="Rtable Rtable--5cols Rtable--collapse">
-            <div class="Rtable-row Rtable-row--head">
+            <div class="Rtable-row Rtable-row--head headers-fixed">
                 <div class="Rtable-cell small-cell column-heading">Checkbox</div>
                 <div class="Rtable-cell small-cell column-heading">Order No.</div>
                 <div class="Rtable-cell small-cell column-heading">Ticket No.</div>
