--- a/src/components/orders/new-order.template.html
+++ b/src/components/orders/new-order.template.html
@@ -116,14 +116,14 @@
         <div class="col-sm">
             <form class="example" action="javascript:void(0);">
                 <input [(ngModel)]="scannedPartNo" (keyup.enter)='onScanSubscription.next({ event: $event, message: SCAN_EVENT_PARTNO })' class="search"
-                    type="text" placeholder="Search.." name="search">
+                    type="text" placeholder="Search.." name="Search">
                 <button type="submit"><i class="material-icons small">search</i></button>
             </form>
         </div>
         <div class="col-sm">
             <form class="example" action="javascript:void(0);">
                 <!-- <input #testinput [(ngModel)]="scannedSerialNo" (keyup.enter)='onScanSubscription.next({ event: $event, message: SCAN_EVENT_MACADDRESS })' -->
-                <input #testinput [(ngModel)]="scannedSerialNo" (keyup.enter)='addItem(testinput.value)'
+                <input #testinput [(ngModel)]="scannedSerialNo" [disabled]="!scannedPartNo"  (keyup.enter)='addItem(testinput.value)'
                     class="search" type="text" placeholder="MAC Address" name="mac">
                 <button  type="submit"><i class="material-icons small">search</i></button>
             </form>
