Fix order save bug
There was a problem with mutability in order dto.

--- a/src/components/orders/new-order.template.html
+++ b/src/components/orders/new-order.template.html
@@ -142,7 +142,7 @@
         </div>
         <div class="col-xs">
             <div class="btn-container">
-                <a href="javascript:void(0);" (click)="save()" [class.disabled]="!canSave"  class="btn-primary">
+                <a href="javascript:void(0);" (click)="save($event)" [class.disabled]="!canSave"  class="btn-primary">
                      <span><i class="material-icons small">save</i></span>
                      <div class="btn-text">Save</div>
                 </a>
