New Order: add field for notes

--- a/src/components/orders/new-order.component.scss
+++ b/src/components/orders/new-order.component.scss
@@ -141,5 +141,28 @@
 
 }
 
+textarea{
+    padding: 10px;
+    font-size: 17px;
+    border: 0px solid #ddd;
+    float: left;
+    background: white;
+    font-family: 'Titillium Web';
+}
+
+.filter-fixed{
+    background-color: #eeeeee;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 3.5rem;
+    z-index: 3;
+  }
+
+.headers-fixed{
+    position: -webkit-sticky;
+    position: sticky;
+    top: 7.3rem;
+    z-index: 3;
+  }
 
 
