--- a/src/components/inventory/inventory.template.html
+++ b/src/components/inventory/inventory.template.html
@@ -154,7 +154,7 @@
         <div class="content">
             <div class="inner">
                 <div class="flex-container row padded-aside">
-                    <h2 class="center">Item Historu</h2>
+                    <h2 class="center">Item History</h2>
                 </div>
                 <div class="flex-container row padded-aside">
                     <div class="col">
