--- a/src/components/orders/new-order.template.html
+++ b/src/components/orders/new-order.template.html
@@ -2,6 +2,46 @@
     <div *ngIf="showMessage" class="alert" [ngClass]="{'alert-info': showInfo === true} " [ngClass]="{'alert-danger': showError === true} " [ngClass]="{'alert-success': showSuccess === true}">
         <strong *ngIf="showError">Error:</strong> <div class="line-breaker">{{alertMessage}}</div> 
     </div>
+    
+<!--Inventory History Modal-->
+<div class="modal-container" *ngIf="showCompleteConfirmation">
+    <div class="content">
+        <div class="inner">
+            <div class="flex-container row padded-aside">
+                <h2 class="center">Confirm save</h2>
+            </div>
+            <div class="flex-container row padded-aside">
+                <div class="col">
+                    <div class="title center">
+                        If you save  the order as completed, you can't edit it later. Are you sure?'                    </div>
+                </div>
+            </div>
+            <div class="flex-container row padded-aside">
+                <div class="col">&nbsp;</div>
+                <div class="col-md">
+                    <div class="btn-container">
+                        <a href="javascript:void(0);" (click)="showCompleteConfirmation = false;save(this.saveEvent);" class="btn-primary center">
+                            <div class="btn-text">Save</div>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md">
+                    <div class="btn-container">
+                        <a href="javascript:void(0);" (click)="showCompleteConfirmation = false;" class="btn-primary center">
+                            <div class="btn-text">Cancel</div>
+                        </a>
+                    </div>
+                </div>
+                <div class="col">&nbsp;</div>
+            </div>
+        </div>
+    </div>
+    <div class="modal-backdrop"></div>
+</div>
+<!--end of modal-->
+
+
+
     <div class="flex-grid padded-aside">
         <div class="col">
             <div class="title">
@@ -148,7 +188,7 @@
         </div>
         <div class="col-xs">
             <div class="btn-container">
-                <a href="javascript:void(0);" (click)="save($event)" [class.disabled]="!canSave"  class="btn-primary">
+                <a href="javascript:void(0);" (click)="saveCompleteConfirmtation($event)" [class.disabled]="!canSave"  class="btn-primary">
                      <span><i class="material-icons small">save</i></span>
                      <div class="btn-text">Save</div>
                 </a>
@@ -171,133 +211,57 @@
         </div>
     </div>
 
-        <!-- Product Items on Order In -->
-        <div class="wrapper padded-aside" *ngIf="orderProducts.order.orderType.orderDirection == 'In'">
-            <div class="Rtable Rtable--5cols Rtable--collapse">
-                <div class="Rtable-row Rtable-row--head headers-fixed">
-                    <div class="Rtable-cell small-cell column-heading">Serial no</div>
-                    <div class="Rtable-cell topic-cell column-heading">Name</div>
-                    <div class="Rtable-cell date-cell column-heading">Warehouse</div>
-                    <div class="Rtable-cell date-cell column-heading">Inventory</div>
-                    <div class="Rtable-cell date-cell column-heading">Inventory Status</div>
-                    <div class="Rtable-cell date-cell column-heading">Item Status</div>
-                    <div class="Rtable-cell small-cell column-heading">Delete</div>
-                </div>
-
-                <ng-container *ngFor="let orderDetail of orderDetailArray">
-                    <ng-container *ngIf="selectedProductKey === orderDetail.key">
-                        <div class="Rtable-row" *ngFor="let item of orderDetail.value">
-                            <div class="Rtable-cell small-cell">
-                                <div class="Rtable-cell--heading">Serial No.</div>
-                                <div class="Rtable-cell--content date-content">{{item.serialNumber}}</div>
-                            </div>
-                            <div class="Rtable-cell topic-cell">
-                                <div class="Rtable-cell--heading">Name</div>
-                                <div class="Rtable-cell--content title-content">{{item.name}}</div>
-                            </div>
-                            <div class="Rtable-cell date-cell">
-                                <div class="Rtable-cell--heading">Warehouse</div>
-                                <div class="Rtable-cell--content title-content">{{item.warehouseCat.name}}</div>
-                            </div>
-                            <div class="Rtable-cell date-cell">
-                                <div class="Rtable-cell--heading">Inventory</div>
-                                <div class="Rtable-cell--content title-content">{{item.inventoryCat.name}}</div>
-                            </div>
-                            <div class="Rtable-cell date-cell">
-                                <div class="Rtable-cell--heading">Inventory Status</div>
-                                <div class="Rtable-cell--content title-content">{{item.onInventoryStatusCat.name}}</div>
-                            </div>
-                            <div class="Rtable-cell date-cell">
-                                <div class="Rtable-cell--heading">Item Status</div>
-                                <div class="Rtable-cell--content title-content">{{item.itemStatusCat.name}}</div>
-                            </div>
-                            <div class="Rtable-cell small-cell">
-                                <div class="Rtable-cell--heading">Delete</div>
-                                <div class="Rtable-cell--content">
-                                    <a  href="javascript:void(0);" [class.disabled]="!canSave" (click)="removeitem(item.partNumber, item.serialNumber)" class="btn-container">
-                                        <span><i class="material-icons small">delete_forever</i></span>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </ng-container>
-                </ng-container>
-            </div>
+<!-- Product Items on Order In -->
+<div class="wrapper padded-aside" *ngIf="orderProducts.order.orderType.orderDirection == 'In'">
+    <div class="Rtable Rtable--5cols Rtable--collapse">
+        <div class="Rtable-row Rtable-row--head headers-fixed">
+            <div class="Rtable-cell small-cell column-heading">Serial no</div>
+            <div class="Rtable-cell topic-cell column-heading">Name</div>
+            <div class="Rtable-cell date-cell column-heading">Warehouse</div>
+            <div class="Rtable-cell date-cell column-heading">Inventory</div>
+            <div class="Rtable-cell date-cell column-heading">Inventory Status</div>
+            <div class="Rtable-cell date-cell column-heading">Item Status</div>
+            <div class="Rtable-cell small-cell column-heading">Delete</div>
         </div>
 
-
-        <div class="flex-container row padded-aside" *ngIf="orderProducts.order.orderType.orderDirection == 'Out'">
-            <div class="example-container">
-                <h2>All Products</h2>
-                <div
-                    cdkDropList
-                    #todoList="cdkDropList"
-                    [cdkDropListData]="availableProductsList"
-                    [cdkDropListConnectedTo]="[doneList]"
-                    class="example-list"
-                    (cdkDropListDropped)="drop($event)">
-                    <div class="example-box" *ngFor="let item of availableProductsList" cdkDrag>
-                        <div class="wrapper">
-                            <div class="Rtable Rtable--5cols Rtable--collapse">
-                                <div class="Rtable-row Rtable-row--head">
-                                    <div class="Rtable-cell small-cell column-heading">Serial no</div>
-                                    <div class="Rtable-cell topic-cell column-heading">Name</div>
-                                </div>
-                
-                                <ng-container>
-                                    <ng-container>
-                                        <div class="Rtable-row">
-                                            <div class="Rtable-cell small-cell">
-                                                <div class="Rtable-cell--heading">Serial No.</div>
-                                                <div class="Rtable-cell--content date-content">{{item.serialNumber}}</div>
-                                            </div>
-                                            <div class="Rtable-cell topic-cell">
-                                                <div class="Rtable-cell--heading">Name</div>
-                                                <div class="Rtable-cell--content title-content">{{item.product.name}}</div>
-                                            </div>
-                                        </div>
-                                    </ng-container>
-                                </ng-container>
-                            </div>
+        <ng-container *ngFor="let orderDetail of orderDetailArray">
+            <ng-container *ngIf="selectedProductKey === orderDetail.key">
+                <div class="Rtable-row" *ngFor="let item of orderDetail.value">
+                    <div class="Rtable-cell small-cell">
+                        <div class="Rtable-cell--heading">Serial No.</div>
+                        <div class="Rtable-cell--content date-content">{{item.serialNumber}}</div>
+                    </div>
+                    <div class="Rtable-cell topic-cell">
+                        <div class="Rtable-cell--heading">Name</div>
+                        <div class="Rtable-cell--content title-content">{{item.name}}</div>
+                    </div>
+                    <div class="Rtable-cell date-cell">
+                        <div class="Rtable-cell--heading">Warehouse</div>
+                        <div class="Rtable-cell--content title-content">{{item.warehouseCat.name}}</div>
+                    </div>
+                    <div class="Rtable-cell date-cell">
+                        <div class="Rtable-cell--heading">Inventory</div>
+                        <div class="Rtable-cell--content title-content">{{item.inventoryCat.name}}</div>
+                    </div>
+                    <div class="Rtable-cell date-cell">
+                        <div class="Rtable-cell--heading">Inventory Status</div>
+                        <div class="Rtable-cell--content title-content">{{item.onInventoryStatusCat.name}}</div>
+                    </div>
+                    <div class="Rtable-cell date-cell">
+                        <div class="Rtable-cell--heading">Item Status</div>
+                        <div class="Rtable-cell--content title-content">{{item.itemStatusCat.name}}</div>
+                    </div>
+                    <div class="Rtable-cell small-cell">
+                        <div class="Rtable-cell--heading">Delete</div>
+                        <div class="Rtable-cell--content">
+                            <a  href="javascript:void(0);" [class.disabled]="!canSave" (click)="removeitem(item.partNumber, item.serialNumber)" class="btn-container">
+                                <span><i class="material-icons small">delete_forever</i></span>
+                            </a>
                         </div>
                     </div>
                 </div>
-            </div>
-              
-            <div class="example-container">
-                <h2>Selected Products</h2>
-                <div
-                    cdkDropList
-                    #doneList="cdkDropList"
-                    [cdkDropListData]="draggedProductList"
-                    [cdkDropListConnectedTo]="[todoList]"
-                    class="example-list"
-                    (cdkDropListDropped)="drop($event)">
-                <div class="example-box" *ngFor="let item of draggedProductList" cdkDrag>
-                    <div class="wrapper">
-                        <div class="Rtable Rtable--5cols Rtable--collapse">
-                            <div class="Rtable-row Rtable-row--head">
-                                <div class="Rtable-cell small-cell column-heading">Serial no</div>
-                                <div class="Rtable-cell topic-cell column-heading">Name</div>
-                            </div>
-            
-                            <ng-container>
-                                <ng-container>
-                                    <div class="Rtable-row">
-                                        <div class="Rtable-cell small-cell">
-                                            <div class="Rtable-cell--heading">Serial No.</div>
-                                            <div class="Rtable-cell--content date-content">{{item.serialNumber}}</div>
-                                        </div>
-                                        <div class="Rtable-cell topic-cell">
-                                            <div class="Rtable-cell--heading">Name</div>
-                                            <div class="Rtable-cell--content title-content">{{item.product.name}}</div>
-                                        </div>
-                                    </div>
-                                </ng-container>
-                            </ng-container>
-                        </div>
-                    </div>
-                </div>
-                </div>
-            </div>
-        </div>
+            </ng-container>
+        </ng-container>
+    </div>
+</div>
+
