make sticky filter and headers on inventory-item

--- a/src/components/inventory/inventory.component.scss
+++ b/src/components/inventory/inventory.component.scss
@@ -1,3 +1,18 @@
 .padded-top {
     margin-top: 25px;
 }
+
+.filter-fixed{
+    background-color: #eeeeee;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 3.5rem;
+    z-index: 2;
+  }
+
+.headers-fixed{
+    position: -webkit-sticky;
+    position: sticky;
+    top: 8.8rem;
+    z-index: 2;
+  }
