--- a/src/components/inventory/inventory.template.html
+++ b/src/components/inventory/inventory.template.html
@@ -1,7 +1,7 @@
 <div class="flex-container row padded-aside">
     <h1>Inventory Item</h1>
 </div>
-<div class="flex-container row padded-aside">
+<div class="flex-container row padded-aside filter-fixed">
     <div class="col-xs padded-top">
         <div class="btn-container" (click)="showModal();">
             <a href="javascript:void(0);" class="btn-secondary">
@@ -85,7 +85,7 @@
 <div class="flex-container row padded-aside">
     <div class="wrapper">
         <div class="Rtable Rtable--5cols Rtable--collapse">
-            <div class="Rtable-row Rtable-row--head">
+            <div class="Rtable-row Rtable-row--head headers-fixed">
                 <div class="Rtable-cell small-cell column-heading">Select</div>
                 <div class="Rtable-cell date-cell column-heading">Serial No.</div>
                 <div class="Rtable-cell topic-cell column-heading">Product Name</div>
